--- a/index.html
+++ b/index.html
@@ -338,6 +338,23 @@
 </ul>
            </div>
 
+           <div class="footer-mail-input">
+            
+            <form>
+                <label class="footer-title"   for="mail">Subscribe</label>
+                <input class="footer-input"
+                type="email" 
+                name="mail" 
+                placeholder="E-mail"
+                id="mail"/>
+                <button class="footer-btn" type="submit">Subscribe
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-Frame-3"></use>
+                    </svg>
+                </button>
+            </form>
+           </div>
+
        </div>
      </footer>
 
@@ -347,7 +364,34 @@
                 <svg class="close" width="8" height="8">
                 <use href="./images/icons.svg#icon-close1"></use>
             </svg></button>
+            <form>
+                <p>Leave your contacts and we will call you back</p>
+                <div>
+                <label for="name">Name</label>
+                <input 
+                type="text" 
+                name="Name" 
+                id="name">
+                <label for="phone">Phone</label>
+                <input 
+                type="tel" 
+                name="phone" 
+                id="phone">
+                <label for="email">Email</label>
+                <input 
+                type="email" 
+                name="email" 
+                id="email">
+                <label for="comment">Comment</label>
+                <textarea 
+                name="comment" 
+                id="" 
+                cols="30" 
+                rows="10"></textarea>
+                </div>
+            </form>
         </div>
+        
      </div>
 
      <script src="./js/modal.js"></script>
