--- a/index.html
+++ b/index.html
@@ -340,13 +340,15 @@
 
            <div class="footer-mail-input">
             
-            <form>
+            <form class="form-foter">
+                <div class="form-subscribe">
                 <label class="footer-title"   for="mail">Subscribe</label>
                 <input class="footer-input"
                 type="email" 
                 name="mail" 
                 placeholder="E-mail"
                 id="mail"/>
+                </div>
                 <button class="footer-btn" type="submit">Subscribe
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-Frame-3"></use>
@@ -364,30 +366,54 @@
                 <svg class="close" width="8" height="8">
                 <use href="./images/icons.svg#icon-close1"></use>
             </svg></button>
-            <form>
-                <p>Leave your contacts and we will call you back</p>
+            <form >
+                <p class="form-title">Leave your contacts and we will call you back</p>
                 <div>
-                <label for="name">Name</label>
+                <div class="form-field">
+                <label for="name" class="form-label">Name</label>
                 <input 
-                type="text" 
-                name="Name" 
+                type="text"
+                class="form-input" 
+                name="name" 
                 id="name">
-                <label for="phone">Phone</label>
+                <svg class="modal-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-person-1"></use>
+                </svg>
+                </div>
+                <div class="form-field">
+                <label for="phone" class="form-label">Phone</label>
                 <input 
                 type="tel" 
+                class="form-input"
                 name="phone" 
                 id="phone">
-                <label for="email">Email</label>
+                <svg class="modal-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+                </div>
+                <div class="form-field">
+                <label for="email" class="form-label">Email</label>
                 <input 
                 type="email" 
+                class="form-input"
                 name="email" 
                 id="email">
-                <label for="comment">Comment</label>
+                <svg class="modal-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+                </div>
+                <div class="form-field">
+                <label for="comment" class="form-label">Comment</label>
                 <textarea 
-                name="comment" 
-                id="" 
-                cols="30" 
-                rows="10"></textarea>
+                name="comment" class="form-textarea" placeholder="Text input"></textarea>
+                </div>
+
+                <div class="form-check">
+                <input type="checkbox" class="form-check-input visually-hidden" name="policy" id="policy">
+                <label for="policy" class="form-check-label">I accept the terms and conditions of the&nbsp;<a href="" class="form-link">Privacy Policy</a></label>
+                </div>
+                <button type="submit" class="btn-send">Send</button>
+                
                 </div>
             </form>
         </div>
