--- a/portfolio.html
+++ b/portfolio.html
@@ -210,26 +210,27 @@
                 <ul class="social-list-footer list">
                     <li class="social-item">
                         <a class="social-link social-link-footer" href="">
-                            <svg class="social-icon">
+                            <svg width="24" height="24" class="social-icon-footer">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a class="social-link social-link-footer" href="">
-                            <svg class="social-icon">
+                            <svg width="24" height="24" class="social-icon-footer">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link social-link-footer" href=""><svg class="social-icon">
+                        <a class="social-link social-link-footer" href=""><svg width="24" height="24"
+                                class="social-icon-footer">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
                     <li class="social-item">
                         <a class="social-link social-link-footer" href="">
-                            <svg class="social-icon">
+                            <svg width="24" height="24" class="social-icon-footer">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
                     </li>
@@ -237,12 +238,9 @@
             </div>
     
             <div class="footer-mail-input">
-    
+                <p class="footer-title">Subscribe</p>
                 <form class="form-foter">
-                    <div class="form-subscribe">
-                        <label class="footer-title" for="mail">Subscribe</label>
-                        <input class="footer-input" type="email" name="mail" placeholder="E-mail" id="mail" />
-                    </div>
+                    <input class="footer-input" aria-label="email" type="email" name="mail" placeholder="E-mail" />
                     <button class="footer-btn" type="submit">Subscribe
                         <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-Frame-3"></use>
